# gmod-mongodb

./: .dockerignore  .gitignore  Build.md  CMakeLists.txt  Dockerfile.linux  Dockerfile.test  Dockerfile.windows  Docs.md  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: main.yml
projects/Basic/: Basic.cpp  CMakeLists.txt
projects/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
projects/MetaTable/: MetaTable.cpp
projects/MongoDb/: Bulk.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Collection.cpp  Collection.hpp  Database.cpp  Database.hpp  Macros.hpp  MongoDB.cpp  MongoDB.hpp  ObjectID.hpp  Util.hpp
